wine-development (1.7.35-2) UNRELEASED; urgency=medium

  * Explicitly retrieve DEB_BUILD_ARCH_... to allow building without
    dpkg-buildpackage.

 -- Stephen Kitt <skitt@debian.org>  Sat, 31 Jan 2015 13:13:39 +0100

wine-development (1.7.35-1) experimental; urgency=medium

  * New upstream release 1.7.35, released Jan 23, 2015.
    - Beginnings of support for OpenGL core contexts.
    - Initial support for glyph placement in DirectWrite.
    - Some more WBEM objects.
    - Various bug fixes.
  * Use git's update-index to ignore automatically generated tracked files.
  * Use abort instead of assert for mmap failure modes.
  * Update copyright years.

 -- Michael Gilbert <mgilbert@debian.org>  Sat, 24 Jan 2015 23:48:10 +0000

wine-development (1.7.34-1) experimental; urgency=medium

  * New upstream release 1.7.34, released Jan 9, 2015.
    - Support for surround sound in DirectSound.
    - Better text run support in DirectWrite.
    - Many HTML engine fixes.
    - More support for WBEM objects.
    - A few more C/C++ runtime functions.
    - Various bug fixes.
  * Apply proposed upstream patch that implements job objects.

 -- Michael Gilbert <mgilbert@debian.org>  Sat, 10 Jan 2015 16:51:49 +0000

wine-development (1.7.33-1) experimental; urgency=medium

  * New upstream release 1.7.33, released Dec 12, 2014.
    - Support for copy/paste commands in MSHTML.
    - Some more font support in DirectWrite.
    - Better handling for loss of focus in Direct3D windows.
    - Several more API Sets DLLs.
    - Various bug fixes.
  * Set a default pulseaudio latency that avoids stuttering (closes: #581624).
  * Implement a better solution for disabling the mono and gecko downloaders.
  * Use asserts for shared library mmap failures (fixes a lintian warning).
  * Eliminate delay when wine shuts down (closes: #745346).

 -- Michael Gilbert <mgilbert@debian.org>  Sat, 20 Dec 2014 01:49:03 +0000

wine-development (1.7.32-1) experimental; urgency=medium
